--- a/app/src/main/res/layout/each_contact_res.xml
+++ b/app/src/main/res/layout/each_contact_res.xml
@@ -43,13 +43,11 @@
 
     <ImageView
         android:id="@+id/seleted_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/ic_select"
         android:layout_gravity="right"
-        android:visibility="gone"
         android:padding="5dp"
-        android:layout_marginTop="42dp"
         ></ImageView>
-
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
